--- a/src/components/layouts/Header.astro
+++ b/src/components/layouts/Header.astro
@@ -77,7 +77,7 @@ const navItems = [
                                 <div tabindex="0" role="button" class="btn btn-ghost">
                                     <span>{item.name}</span>
                                     <Icon
-                                        name="material-symbols:keyboard-arrow-down"
+                                        name="mdi:keyboard-arrow-down"
                                         class="ml-1 h-4 w-4"
                                     />
                                 </div>
@@ -107,7 +107,7 @@ const navItems = [
                         <span>
                             {getNameFromLocale(locale)}
                         </span>
-                        <Icon name="material-symbols:keyboard-arrow-down" class="ml-1 h-4 w-4" />
+                        <Icon name="mdi:keyboard-arrow-down" class="ml-1 h-4 w-4" />
                     </div>
                     <ul
                         tabindex="0"
@@ -127,7 +127,7 @@ const navItems = [
             <!-- Mobile Menu Button -->
             <div class="lg:hidden">
                 <label for="mobile-drawer" class="btn btn-square btn-ghost">
-                    <Icon name="material-symbols:menu" class="h-6 w-6" />
+                    <Icon name="mdi:menu" class="h-6 w-6" />
                 </label>
             </div>
         </div>
