--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -222,7 +222,7 @@ const categories = [
                                                     })}
                                                 </span>
                                                 <Icon
-                                                    name="material-symbols:arrow-right-alt"
+                                                    name="mdi:arrow-right"
                                                     class="ml-2 h-4 w-4"
                                                 />
                                             </div>
