--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { useTranslations } from "../libs/i18n";
-import Hero from "../components/Hero.astro";
+import Hero from "../components/top/Hero.astro";
 import AboutSection from "../components/AboutSection.astro";
 import LatestActivities from "../components/LatestActivities.astro";
 import LatestNews from "../components/LatestNews.astro";
