chore: トップページ専用のコンポーネントを`src/components/top`以下に移動

--- a/src/components/top/LatestActivities.astro
+++ b/src/components/top/LatestActivities.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import { useTranslations } from "../libs/i18n";
+import { useTranslations } from "../../libs/i18n";
 
 const { t, l, getCollection } = useTranslations(Astro.url);
 
