--- a/src/components/top/LatestNews.astro
+++ b/src/components/top/LatestNews.astro
@@ -1,5 +1,5 @@
 ---
-import { useTranslations } from "../libs/i18n";
+import { useTranslations } from "../../libs/i18n";
 import { Image } from "astro:assets";
 
 const { t, l, getCollection } = useTranslations(Astro.url);
