--- a/src/components/top/AboutSection.astro
+++ b/src/components/top/AboutSection.astro
@@ -1,6 +1,6 @@
 ---
 import { getEntry } from "astro:content";
-import { useTranslations } from "../libs/i18n";
+import { useTranslations } from "../../libs/i18n";
 import { Icon } from "astro-icon/components";
 
 const { t, l } = useTranslations(Astro.url);
