--- a/src/components/layouts/Header.astro
+++ b/src/components/layouts/Header.astro
@@ -76,10 +76,7 @@ const navItems = [
                             <div class="dropdown dropdown-hover">
                                 <div tabindex="0" role="button" class="btn btn-ghost">
                                     <span>{item.name}</span>
-                                    <Icon
-                                        name="mdi:keyboard-arrow-down"
-                                        class="ml-1 h-4 w-4"
-                                    />
+                                    <Icon name="mdi:keyboard-arrow-down" class="ml-1 h-4 w-4" />
                                 </div>
 
                                 <ul
