--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 import { useTranslations } from "../libs/i18n";
 import Hero from "../components/top/Hero.astro";
-import AboutSection from "../components/AboutSection.astro";
-import LatestActivities from "../components/LatestActivities.astro";
-import LatestNews from "../components/LatestNews.astro";
+import AboutSection from "../components/top/AboutSection.astro";
+import LatestActivities from "../components/top/LatestActivities.astro";
+import LatestNews from "../components/top/LatestNews.astro";
 
 const { t } = useTranslations(Astro.url);
 ---
